# caseCalculator

./: README.md  pyproject.toml
src/: config.py  main.py
src/models/: case.py
src/ui/: case_details.py  case_list.py  case_view.py  main_window.py
src/utils/: scheduler.py  storage.py
